# m-vipe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: die.h  ioblksize.h  m-vipe.h.in  main.c
test/: main.sh  show_args.sh  strategy.md
tools/: build.sh  lint.sh
tools/.bin/: clang-toolbox.py
